--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
   applications:
   - name: onlinecourse
     routes:
-      - route: fp-87c.us-south.cf.appdomain.cloud
+      - route: tsfpc.us-south.cf.appdomain.cloud
     memory: 128M
     buildpack: python_buildpack
   - name: onlinecourse-nginx
     routes:
-      - route: fp-87c.us-south.cf.appdomain.cloud/static
+      - route: tsfpc.us-south.cf.appdomain.cloud/static
     memory: 128M
     buildpack: staticfile_buildpack
